Update title in references.bib

--- a/references.bib
+++ b/references.bib
@@ -2,7 +2,7 @@
   author  = {Daiki Okayama},
   journal = {XXX},
   number  = {1234},
-  title   = {H},
+  title   = {My LaTeX Skelton about Skeleton},
   volume  = {1},
   year    = {2024}
 }
