--- a/slides.tex
+++ b/slides.tex
@@ -1,6 +1,10 @@
 \documentclass[aspectratio=169]{beamer}
 \usepackage{luatexja}
 
+% \usepackage[backend=biber, style=numeric]{biblatex}
+% TODO: My biber (2.20) and biblatex (3.19) versions are incompatible, but I am tired to upgrade/downgrade them.
+% Instead, I am temporarily using bibtex as a backend.
+% See detail https://github.com/orgs/Homebrew/discussions/3003#discussioncomment-9153790
 \usepackage[backend=bibtex, style=numeric]{biblatex}
 \addbibresource{references.bib}
 
