Change the beamer theme

--- a/slides.tex
+++ b/slides.tex
@@ -11,7 +11,7 @@
 \addbibresource{references.bib}
 
 % Theme
-\usetheme{Boadilla}     % Like default, but with a footer
+\usetheme{metropolis}
 \usecolortheme{default}
 
 % Fonts
