Change to use alphabetic style with no sorting in biblatex

--- a/resume.tex
+++ b/resume.tex
@@ -1,7 +1,7 @@
 \documentclass[lualatex, article]{jlreq}
 \usepackage{luatexja}
 
-\usepackage[backend=bibtex, style=numeric]{biblatex}
+\usepackage[backend=bibtex, style=alphabetic, sorting=none]{biblatex}
 \addbibresource{references.bib}
 
 % Packages
