Add booktabs package for formal tables

--- a/slides.tex
+++ b/slides.tex
@@ -2,6 +2,7 @@
 
 % Packages
 \usepackage{luatexja}
+\usepackage{booktabs}  % For formal tables
 
 % \usepackage[backend=biber, style=numeric]{biblatex}
 % TODO: My biber (2.20) and biblatex (3.19) versions are incompatible, but I am tired to upgrade/downgrade them.
