Configure settings for Japanese

--- a/slides.tex
+++ b/slides.tex
@@ -11,6 +11,15 @@
 \usepackage[backend=bibtex, style=alphabetic, sorting=none]{biblatex}
 \addbibresource{references.bib}
 
+% Japanize
+\uselanguage{japanese}
+\languagepath{japanese}
+\renewcommand{\figurename}{図}
+\renewcommand{\tablename}{表}
+\deftranslation[to=japanese]{Theorem}{定理}
+\deftranslation[to=japanese]{Lemma}{補題}
+\deftranslation[to=japanese]{Definition}{定義}
+
 % Theme
 \usetheme{metropolis}
 \usecolortheme{default}
