Assign numbers to theorems, lemmas, etc

--- a/slides.tex
+++ b/slides.tex
@@ -41,6 +41,7 @@
 \author{岡山大輝}
 \institute{兵庫県立大学}
 \date{\today}
+\setbeamertemplate{theorems}[numbered]  % Numbered theorems, lemmas, etc.
 
 \AtBeginSection[]
 {
@@ -55,17 +56,15 @@
   \titlepage{}
 \end{frame}
 
-\begin{frame}{目次}
-  \tableofcontents
+\begin{frame}
+  \begin{abstract}
+    スケルトンは、骨格や基盤を指す用語であり、多くの分野で重要な役割を果たす。
+    本スライドでは、生物学、建築学、コンピュータサイエンスにおけるスケルトンの利用価値と応用例を紹介する。
+  \end{abstract}
 \end{frame}
 
-\section{概要}
-
-\begin{frame}{概要}
-  \begin{itemize}
-    \item スケルトンは、骨格や基盤を指す用語であり、多くの分野で重要な役割を果たす。
-    \item 本スライドでは、生物学、建築学、コンピュータサイエンスにおけるスケルトンの利用価値と応用例を紹介する。
-  \end{itemize}
+\begin{frame}{目次}
+  \tableofcontents
 \end{frame}
 
 \section{生物学におけるスケルトン}
@@ -76,6 +75,18 @@
     \item 人間の骨格は206個の骨から成る。
     \item 近年の研究: スケルトンの再生医療、骨粗鬆症の治療法~\cite{okayama2024how}。
   \end{itemize}
+\end{frame}
+
+\begin{frame}{生物学におけるスケルトンに関連する定理}
+  \begin{theorem}[スケルトンの健康]
+    スケルトンの健康は、栄養素やホルモンバランス、運動などに大きく依存する。
+  \end{theorem}
+  \begin{lemma}[スケルトンの機能]
+    スケルトンは、身体の支持、運動、保護の機能を果たす。
+  \end{lemma}
+  \begin{definition}[スケルトンの再生医療]
+    スケルトンの再生医療は、骨折や骨粗鬆症の治療法の開発に貢献する。
+  \end{definition}
 \end{frame}
 
 \section{建築学におけるスケルトン}
